# StackScout

./: .env.example  .gitignore  AUTH_SETUP.md  ENVIRONMENT_SETUP_GUIDE.md  MILLION_SUFFIX_IMPLEMENTATION_SUMMARY.md  README.md  RECOMMENDATIONS_SETUP.md  SALARY_FILTERING_UPGRADE_SUMMARY.md  TIMEOUT_FIX_SUMMARY.md  TODO.md  TODO_NOTIFICATIONS_IMPROVEMENTS.md  TODO_STRICT_PARSING.md  TODO_STRICT_PARSING_FINAL.md  TODO_STRICT_PARSING_UPDATED.md  TODO_UPDATED.md  add_numeric_salary_columns_fixed.sql  arkdev_actual.html  array_parser.py  check_db_jobs.py  chromedriver_test.py  comprehensive_salary_testing.py  create_ai_generators_schema.sql  create_jobs_schema.sql  create_notifications_schema.sql  create_recommendations_schema.sql  create_search_history_table.sql  create_users_schema.sql  database_config_specs.md  debug_detailed.sql  debug_full_function.sql  debug_multiplier.sql  debug_regex.sql  debug_regex_groups.sql  display_jobs.py  enhanced_job_storage.py  enhanced_scraper.py  enhanced_web_integration.py  geckodriver_test.py  generate_secret_key.py  integrate_with_scrapers.py  (+36 more)
templates/: ai_tools.html  analytics_dashboard.html  database_manager_clean.html  database_manager_enhanced.html  enhanced_index.html  index.html  login.html  register.html  results.html
tests/: test_ai_generators.py  test_analytics.py  test_api_search.py  test_arkdev.py  test_arkdev_simple.py  test_auth.py  test_e2e_auth_notifications.py  test_enhanced_filters.py  test_form_data_extraction.py  test_multi_platform_scraper.py  test_multi_platform_scraper_playwright.py  test_notifications.py  (+6 more)
(+33 files in other folders)
